
* The lowest supported version of PHP is now 5.2.3. If necessary, please
  upgrade PHP prior to upgrading MediaWiki.

=== Changes since 1.17.0rc1 ===

* Fixed syntax error in generated LocalSettings.php when a non-default user
  rights profile is chosen.
* (bug 29399) Fixed PostgreSQL installation when the DB user for installation 
  is the same as the one for web access. 

=== Changes since 1.17 beta 1 ===

* Fixed warning about missing file "password.js".
* When installing on MySQL, don't attempt to create a new database user if the 
  same user is used for installation and web access.
* Fixed SQL query errors in queries with table aliases.
* (bug 27891) Fixed the "chronology protector", broken since 1.17beta1, which 
  ensures that when database replication is used, the new version is seen by 
  the user immediately after they create or edit an article.
* (bug 28845) Allow PostgreSQL installation using a non-root user account which 
  has role creation abilities.
* When installing on PostgreSQL and the install account is the same as the web
  account, check to make sure that the account has suitable privileges in the 
  mediawiki schema.
* (Bug 28172) Fixed error in PostgreSQL installation when creating the wiki 
  sysop account.
* Fixed an issue with the Oracle installer in cases where the user is different 
  to the database name.
* Added "unblockself" to the list of available rights. 
* In the installer, fixed the "user rights profile" option, it never worked.
* (bug 29117) Fixed Hebrew localisation of the installer.
* (bug 28840) Reduce the collateral damage caused by the fix for bug 28235 (XSS
  on Internet Explorer 6 due to a file extension in the query string) by 
  reducing the number of URLs that are blocked, and by redirecting the request
  to a safer URL where possible instead of blocking it. 
* (bug 28812) Fixed documentation of API action=parse.
* (bug 28979) Fixed styling of <abbr> and <acronym>.